# AKOS_1st_sem

./: README.md
LogicElements/: CMakeLists.txt  Graph_ext.cpp  Makefile  logic.cpp  logic.h  logic_shapes.cpp  logic_shapes.h  main.cpp
LogicElements/Graph_lib/: GUI.cpp  Simple_window.h
MarkovMachines/: sum_markov.yad
TuringMachines/: double_summing_turing.turing  mulriple.turing  single_multimple_turing.turing  summary.turing  tests.txt
markov_machine/: multiple_double_markov.yad  multiple_single_markov.yad  sum_markov.yad  test.txt.txt
